@@ -1,11 +1,12 @@
 package br.com.helpet.dao.jinq;
 
+import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import br.com.helpet.dao.DaoFactory;
+import org.jinq.tuples.Pair;
+import org.jinq.tuples.Tuple3;
+
 import br.com.helpet.dao.IAdoptionDao;
-import br.com.helpet.dao.IDao;
 import br.com.helpet.entities.Adoption;
 
 public class AdoptionDao extends GenericDao<Adoption> implements IAdoptionDao {
@@ -15,29 +16,27 @@ public class AdoptionDao extends GenericDao<Adoption> implements IAdoptionDao {
 	}
 
 	@Override
-	public List<String> getAdoptionHistory() {		
-		IDao<Adoption> adoptionDao = DaoFactory.getDao(Adoption.class);
-		List<Adoption> adoptionsRaw = adoptionDao.list();
-		return adoptionsRaw.stream()
-				.map(x -> "Cidade: "+x.getPerson().getAddress().getCity() + " - "
-						+ "Adoções: "+adoptionsRaw.stream().filter(y -> y.getPerson().getAddress().getCity()
-								.equals(x.getPerson().getAddress().getCity())).count())
-				.sorted()
-				.distinct()
-				.collect(Collectors.toList());
+	public List<Pair<String,Long>> getAdoptionHistory() {		
+		return super.getStream()
+				.group(
+					a -> a.getPerson().getAddress().getCity(),
+					(city, stream) -> stream.count())
+				.sortedBy(p -> p.getOne())
+				.sortedDescendingBy(p -> p.getTwo())
+				.toList();
 	}
 
 	@Override
-	public List<String> getAdoptionSummary(String city){
-		IDao<Adoption> adoptionDao = DaoFactory.getDao(Adoption.class);
-		List<Adoption> adoptionsRaw = adoptionDao.list();
-		return adoptionsRaw.stream()
-				.map(x -> "Espécie: "+x.getAnimal().getSpecie() + " - "
-						+ "Quantidade: "+adoptionsRaw.stream().filter(y -> y.getPerson().getAddress().getCity()
-								.equals(city) && y.getAnimal().getSpecie().equals(x.getAnimal().getSpecie())).count())
-				.sorted()
-				.distinct()
-				.collect(Collectors.toList());
+	public List<Tuple3<String, String, Long>> getAdoptionSummary(Date start, Date end){
+		return super.getStream()
+				.where(a -> a.getDate().after(start) && a.getDate().before(end))
+				.group(
+					a -> a.getAnimal().getSpecie(),
+					(specie, stream) -> stream.min(a -> a.getPerson().getAddress().getCity()),
+					(specie, stream) -> stream.count())
+				.sortedDescendingBy(tuple -> tuple.getThree())
+				.sortedBy(tuple -> tuple.getOne())
+				.sortedBy(tuple -> tuple.getTwo())
+				.toList();
 	}
-
 }
