@@ -1,14 +1,12 @@
 package br.com.helpet.dao.jinq;
 
-import java.sql.Date;
+import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import br.com.helpet.dao.DaoFactory;
-import br.com.helpet.dao.IDao;
+import org.jinq.tuples.Tuple3;
+
 import br.com.helpet.dao.IExpenseDao;
 import br.com.helpet.entities.Expense;
-import sun.net.www.content.audio.x_aiff;
 
 public class ExpenseDao extends GenericDao<Expense> implements IExpenseDao{
 
@@ -17,47 +15,39 @@ public class ExpenseDao extends GenericDao<Expense> implements IExpenseDao{
 	}
 
 	@Override
-	public List<String> getSpeciesExpenses() {
-		IDao<Expense> expenseDao = DaoFactory.getDao(Expense.class);
-		List<Expense> expensesRaw = expenseDao.list();
-		return expensesRaw.stream()
-					.map(x -> "Espécie: " + x.getAnimal().getSpecie() + " - Quant. Serviços: "+ expensesRaw.stream()
-							.filter(y -> y.getAnimal().getSpecie().equals(x.getAnimal().getSpecie())).map(y -> y.getService()).count()+
-							" - Gastos: "+ expensesRaw.stream().filter(y -> y.getAnimal().getSpecie().equals(x.getAnimal().getSpecie()))
-							.mapToDouble(y ->y.getService().getValue()).sum())
-					.sorted()
-					.distinct()
+	public List<Tuple3<String, Long, Double>> getSpeciesExpenses() {
+		return super.getStream()
+					.group(
+						e -> e.getAnimal().getSpecie(),
+						(specie, stream) -> stream.count(),
+						(specie, stream) -> stream.sumDouble(e -> e.getService().getValue()))
+					.sortedDescendingBy(tuple -> tuple.getThree())
 					.limit(10)
-					.collect(Collectors.toList());			
+					.toList();
 	}
 
 	@Override
-	public List<String> getServicesHistory(String description) {
-		IDao<Expense> expenseDao = DaoFactory.getDao(Expense.class);
-		List<Expense> expensesRaw = expenseDao.list();
-		return expensesRaw.stream()
-					.map(x -> "Serviço: "+description + " - Valor: "+ expensesRaw.stream()
-							.filter(y -> y.getService().getDescription().equals(description)).mapToDouble(y -> y.getService().getValue())+
-							" - Gastos: "+ expensesRaw.stream().filter(y -> y.getAnimal().getSpecie().equals(x.getAnimal().getSpecie()))
-							.mapToDouble(y ->y.getService().getValue()).sum())
-					.sorted()
-					.distinct()
-					.collect(Collectors.toList());	
+	public List<Tuple3<Double, String, Date>> getServicesHistory(String description) {
+		return super.getStream()
+				.where(e -> e.getService().getDescription().equals(description))
+				.group(
+					e -> e.getService().getValue(),
+					(value, stream) -> description,
+					(value, stream) -> stream.min(e -> e.getDate()))
+				.sortedBy(tuple -> tuple.getThree())
+				.toList();
 	}
 
 	@Override
-	public List<String> getExpensesSummary(Date start, Date end) {
-		IDao<Expense> expenseDao = DaoFactory.getDao(Expense.class);
-		List<Expense> expensesRaw = expenseDao.list();
-		return expensesRaw.stream()
-					.map(x -> "Serviço: " + x.getService().getDescription() + " - Quant. Serviços: "+ expensesRaw.stream()
-							.filter(y -> y.getAnimal().getSpecie().equals(x.getAnimal().getSpecie())).map(y -> y.getService()).count()+
-							" - Gastos: "+ expensesRaw.stream().filter(y -> y.getAnimal().getSpecie().equals(x.getAnimal().getSpecie()))
-							.mapToDouble(y ->y.getService().getValue()).sum())
-					.sorted()
-					.distinct()
-					.collect(Collectors.toList());	
+	public List<Tuple3<String, Long, Double>> getExpensesSummary(Date start, Date end) {
+		return super.getStream()
+				.where(e -> e.getDate().after(start) && e.getDate().before(end))
+				.group(
+					e -> e.getService().getDescription(),
+					(specie, stream) -> stream.count(),
+					(specie, stream) -> stream.sumDouble(e -> e.getService().getValue()))
+				.sortedBy(tuple -> tuple.getOne())
+				.sortedDescendingBy(tuple -> tuple.getThree())
+				.toList();
 	}
-
-	
 }
